Update README.md with Java compilation and execution instructions